# smart-borehole-monitor

./: .env.example  Dockerfile  README.md  alembic.ini  db_test.py  docker-compose.yml  pyproject.toml  seed_readings.py
app/: main.py
app/auth/: dependencies.py  models.py  routes.py  services.py
app/borehole/: models.py  routes.py  services.py
app/core/: config.py  database.py  scheduler.py  schemas.py
app/location/: models.py  routes.py  services.py
app/ml/: models.py
app/pump/: models.py  routes.py  schemas.py  services.py
app/sensor/: models.py  routes.py  schemas.py  services.py
app/weather/: models.py  routes.py  services.py  tasks.py
migration/: env.py
migration/versions/: 41f26516b94d_second_migration.py  4ed591d939dd_rename_raw_reading_to_water_level_on_.py  645e66351f3f_remove_unuse_fields_from_flowreading_.py  8ab3e5345097_change_created_at_to_user_timezone_in_.py  8e7359856e70_add_device_key_field_to_sensor_model.py  9747da7c42db_made_borehole_id_required_on_sensor_.py  b6bf48633cc0_removed_name_field_from_sensor_models.py  b78628891a33_made_fields_nullable_in_weather_add_.py  c29911d8320c_update_created_at_across_all_models_to_.py
scripts/: db_test.py  seed_readings.py
