[project]
name = "smart-borehole-monitor"
version = "0.1.0"
description = "An IoT-based real-time groundwater level monitoring and machine learning-driven pump scheduling system for sustainable borehole management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.3",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "sqlmodel>=0.0.38",
]
